# tcc

./: .gitignore  Analise_EDA.ipynb  pyproject.toml
