[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["André <andre.carpinteiro.amaral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
numpy = "^2.3.2"
requests = "^2.32.5"
matplotlib = "^3.10.5"
kagglehub = "^0.3.13"
plotly = "^6.3.0"
dash = "^3.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "6.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
